[gd_scene load_steps=7 format=3 uid="uid://h4wtj1ukqxig"]

[ext_resource type="Script" path="res://Scene/Spring.gd" id="1_ohk5p"]
[ext_resource type="Texture2D" uid="uid://8rmy30fk4rvp" path="res://Art/spring.png" id="2_6d7g6"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_daall"]
size = Vector2(24.5, 6)

[sub_resource type="AtlasTexture" id="AtlasTexture_blj76"]
atlas = ExtResource("2_6d7g6")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_xe42s"]
atlas = ExtResource("2_6d7g6")
region = Rect2(0, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_euig4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_blj76")
}],
"loop": true,
"name": &"activate",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xe42s")
}],
"loop": true,
"name": &"default",
"speed": 1.0
}]

[node name="Spring" type="Area2D"]
scale = Vector2(3, 3)
script = ExtResource("1_ohk5p")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.75, 8)
shape = SubResource("RectangleShape2D_daall")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_euig4")

[node name="SpringDefualtimer" type="Timer" parent="."]
wait_time = 0.5

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="SpringDefualtimer" to="." method="_on_spring_defualtimer_timeout"]
